2002-01-27  Glenn Maynard <g_ld@zewt.org>

	* commands.cc: implement du --block-size

2002-01-26  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: add missing \n.

2002-01-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, lftp_ssl.h: workaround for improperly closed ssl
	  data connection.

2002-01-22  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, lftp_ssl.cc: fix random SSL_write errors
	  (bad write retry); fix ftp spinning in ssl mode.
	* ftpclass.cc: don't use AUTH TLS for ftp proxy.

2002-01-17  Glenn Maynard <g_ld@zewt.org>

	* ChmodJob.cc: add missing \n.

2002-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc: fixed coredump on unknown service.

2002-01-13  Alexander V. Lukyanov <lav@yars.free.net>

	* StringPool.cc: handle null pointer.

2002-01-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CatJob.cc, CatJob.h: use DontFailIfBroken.
	* LocalAccess.cc: (CurrentStatus) implemented; use stream->status;
	  use chdir to verify directories.

2002-01-10  Glenn Maynard <g_ld@zewt.org>

	* FileCopy.cc, FileCopy.h: (fail_if_broken) new member.
	* ftpclass.cc: comments added; cosmetic changes.

2002-01-09  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h: (FileCopyPeer::done) new member; use it;
	  (FileCopyPeerFDStream::Done) method removed.

2002-01-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc, Job.h: (CheckForWaitLoop) new method.
	* commands.cc: (wait) use it.

2002-01-04  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalDir.cc, LocalDir.h: new files.
	* CmdExec.cc, CmdExec.h: use new LocalDirectory class; specify local
	  directory at CmdExec creation time.
	* LocalAccess.cc: use LocalDirectory.
	* SleepJob.cc, SleepJob.h: specify LocalDirectory at creation time;
	  use it to create CmdExec.
	* commands.cc: handle new CmdExec and SleepJob creation; allow lpwd
	  redirection.
	* lftp.cc: new CmdExec ctor.

2002-01-03  jfaith <jfaith@cemsys.com>
